# bevy_rhai

./: COPYRIGHT  Cargo.toml  README.md
assets/scripts/: minimal.rhai
examples/: minimal.rs
src/: lib.rs  register_bevy_math.rs
