[package]
name = "bevy_rhai"
version = "0.1.0"
authors = ["Leon <sverdleon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default_features = false }
anyhow = "1.0"
serde = {version = "1", features = ["derive"]}
rhai = {version = "1", features = ["sync"]}


[features]
"f32_float" = ["rhai/f32_float"]
"only_i32" = ["rhai/only_i32"]